--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: thackssss
+name: lemon
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -90,6 +90,8 @@ dependencies:
   provider: 6.1.2
   realtime_client: 2.2.1
   rxdart: 0.27.7
+  share_plus: 10.0.2
+  share_plus_platform_interface: 5.0.0
   shared_preferences: 2.3.2
   shared_preferences_android: 2.3.2
   shared_preferences_foundation: 2.5.2
