--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "thackssss",
-    "short_name": "thackssss",
+    "name": "Lemon",
+    "short_name": "Lemon",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
